--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255));
+    /* background: linear-gradient(180deg, rgb(117, 81, 194), rgb(255, 255, 255)); */
     display: flex;
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     height: 100vh;
@@ -48,6 +48,10 @@ body {
     background-color: black;
     border-radius: 8px;
     overflow: auto;
+  }
+
+  h2 {
+    color:#1a1a1a;
   }
   
   li {
